Notification Entity